--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# My own adds:
+example*
+*.Rproj
+*.txt
+
+
 # History files
 .Rhistory
 .Rapp.history
@@ -31,3 +37,4 @@ vignettes/*.pdf
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
+.Rproj.user
